--- a/svg-editor.html
+++ b/svg-editor.html
@@ -483,7 +483,7 @@ by creating the following file and adding by calls to svgEditor.setConfig -->
 		<span id="zoomLabel" class="zoom_tool icon_label"></span>
 		<input id="zoom" size="3" value="100" type="text" />
 		</label>
-		<div id="zoom_dropdown" class="dropdown">
+		<!--div id="zoom_dropdown" class="dropdown">
 			<button></button>
 			<ul>
 				<li>1000%</li>
@@ -498,7 +498,7 @@ by creating the following file and adding by calls to svgEditor.setConfig -->
 				<li id="fit_to_all" data-val="content">Fit to all content</li>
 				<li>100%</li>
 			</ul>
-		</div>
+		</div-->
 		<div class="tool_sep"></div>
 	</div>
 
@@ -553,7 +553,7 @@ by creating the following file and adding by calls to svgEditor.setConfig -->
 					<span id="group_opacityLabel" class="icon_label"></span>
 					<input id="group_opacity" size="3" value="100" type="text"/>
 				</label>
-				<div id="opacity_dropdown" class="dropdown">
+				<!--div id="opacity_dropdown" class="dropdown">
 					<button></button>
 					<ul>
 						<li>0%</li>
@@ -563,7 +563,7 @@ by creating the following file and adding by calls to svgEditor.setConfig -->
 						<li>100%</li>
 						<li class="special"><div id="opac_slider"></div></li>
 					</ul>
-				</div>
+				</div-->
 			</div>
 		</div>
 
